# src/backend/features/orders/models/__init__.py
@@ -1,6 +1,7 @@
+from .idempotency_key import IdempotencyKey
 from .order import Order
 from .order_event import OrderEvent
 from .order_item import OrderItem
 from .order_item_option import OrderItemOption
 
-__all__ = ["Order", "OrderEvent", "OrderItem", "OrderItemOption"]
+__all__ = ["IdempotencyKey", "Order", "OrderEvent", "OrderItem", "OrderItemOption"]
